--- a/index.html
+++ b/index.html
@@ -5,10 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foods</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 <body>
+    <div class="container"></div>
+    <!-- Section 1 -->
+    <section class="section-1">
+        <h1 class="section-heading">
+            Variety of Foods
+        </h1>
+        <div class="section-1-icons">
+            <i class="fas fa-egg change"></i>
+            <i class="fas fa-stroopwafel"></i>
+            <i class="fas fa-cheese"></i>
+            <i class="fas fa-hotdog"></i>
+            <i class="fas fa-drumstick-bite"></i>
+            <i class="fas fa-apple-alt"></i>
+            <i class="fas fa-ice-cream"></i>
+            <i class="fas fa-fish"></i>
+            <i class="fas fa-cookie"></i>
+            <i class="fas fa-seedling"></i>
+        </div>
+    </section>
+    <!-- End of Section 1 -->
 
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
