--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar">
+    <nav class="navbar nav-target">
         <a href="#" class="navbar-link">
             <i class="fas fa-home"></i>
             <span>Home</span>
@@ -32,7 +32,7 @@
             <span>Contact</span>
         </a>
     </nav>
-    <div class="menu"></div>
+    <div class="menu nav-target"></div>
     <!-- End of Navbar -->
 
     <div class="container"></div>
